[gd_scene load_steps=2 format=3 uid="uid://d8vqmx4ynw7a9"]

[ext_resource type="Script" path="res://scripts/card_upgrade.gd" id="1_card"]

[node name="CardUpgrade" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_card")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.25, 0.3, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "強化カード選択"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CardContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Card1" type="Button" parent="VBoxContainer/CardContainer"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2
text = ""

[node name="Card2" type="Button" parent="VBoxContainer/CardContainer"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2
text = ""

[node name="Card3" type="Button" parent="VBoxContainer/CardContainer"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2
text = ""

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "カードを選択してください"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UnitContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Spacer3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="SkipButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "スキップして次へ"

[connection signal="pressed" from="VBoxContainer/CardContainer/Card1" to="." method="_on_card_1_pressed"]
[connection signal="pressed" from="VBoxContainer/CardContainer/Card2" to="." method="_on_card_2_pressed"]
[connection signal="pressed" from="VBoxContainer/CardContainer/Card3" to="." method="_on_card_3_pressed"]
[connection signal="pressed" from="VBoxContainer/SkipButton" to="." method="_on_skip_button_pressed"]
